--- a/res/layout/manage_applications_content.xml
+++ b/res/layout/manage_applications_content.xml
@@ -34,7 +34,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top"
-                android:textAppearance="@style/TextAppearance.PagerTabs"
+                android:textSize="22dp"
                 android:paddingLeft="@dimen/pager_tabs_padding"
                 android:paddingRight="@dimen/pager_tabs_padding">
         </android.support.v4.view.PagerTabStrip>
