--- a/res/layout/manage_applications_running.xml
+++ b/res/layout/manage_applications_running.xml
@@ -37,7 +37,7 @@
                 android:layout_height="wrap_content" />
         <TextView android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textSize="18dip"
                 android:text="@string/settings_safetylegal_activity_loading"
                 android:paddingTop="4dip"
                 android:singleLine="true" />
