--- a/res/layout/master_clear.xml
+++ b/res/layout/master_clear.xml
@@ -16,36 +16,35 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     >
 
     <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="0dip"
+            android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:layout_marginEnd="12dp"
-            android:layout_marginTop="12dp"
-            android:layout_weight="1">
+            android:layout_marginTop="12dp">
         <LinearLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
+                android:textSize="20dp"
                 android:text="@string/master_clear_desc" />
             <TextView android:id="@+id/also_erases_external"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
-                android:textSize="18sp"
+                android:textSize="18dp"
                 android:text="@string/master_clear_desc_also_erases_external" />
             <TextView android:id="@+id/accounts_label"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
-                android:textSize="18sp"
+                android:textSize="18dp"
                 android:text="@string/master_clear_accounts" />
             <LinearLayout android:id="@+id/accounts"
                     android:layout_width="wrap_content"
@@ -58,11 +57,12 @@
             <TextView android:id="@+id/erase_external_option_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
+                android:textSize="18dp"
                 android:text="@string/master_clear_desc_erase_external_storage" />
             <LinearLayout android:id="@+id/erase_external_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
                     android:orientation="horizontal"
                     android:focusable="true"
                     android:clickable="true">
@@ -70,37 +70,36 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:paddingEnd="8dp"
                         android:focusable="false"
                         android:clickable="false"
                         android:duplicateParentState="true" />
-                <LinearLayout android:layout_width="match_parent"
+                <TextView
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:orientation="vertical">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingTop="12dp"
-                        android:textSize="18sp"
+                        android:layout_marginStart="7dp"
+                        android:textSize="20dp"
                         android:text="@string/erase_external_storage" />
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingTop="4sp"
-                        android:textSize="14sp"
-                        android:text="@string/erase_external_storage_description" />
-                </LinearLayout>
             </LinearLayout>
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginStart="30dp"
+                    android:textSize="18dp"
+                    android:text="@string/erase_external_storage_description" />
         </LinearLayout>
     </ScrollView>
     <Button
             android:id="@+id/initiate_master_clear"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dip"
-            android:layout_marginBottom="12dip"
+            android:layout_marginTop="60dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:background="@drawable/mybtn_shape"
+            android:textSize="20dp"
             android:text="@string/master_clear_button_text"
             android:gravity="center" />
 
