--- a/res/layout/master_clear_account.xml
+++ b/res/layout/master_clear_account.xml
@@ -17,7 +17,7 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android" 
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:textSize="18sp"
+    android:textSize="18dp"
     android:drawablePadding="5dip"
     android:gravity="center_vertical" />
 
