--- a/res/layout/media_format_primary.xml
+++ b/res/layout/media_format_primary.xml
@@ -25,14 +25,18 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
+        android:layout_margin="19dp"
+        android:lineSpacingExtra="11dp"
+        android:textSize="22sp"
         android:text="@string/media_format_desc" />
 
     <Button android:id="@+id/initiate_media_format"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="40dip"
-        android:layout_width="150dip"
+        android:layout_marginTop="7dip"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="7dip"
+        android:textSize="21sp"
         android:text="@string/media_format_button_text"
         android:gravity="center" />
         
