--- a/res/layout/preference_dialog_brightness.xml
+++ b/res/layout/preference_dialog_brightness.xml
@@ -35,6 +35,7 @@
                 android:contentDescription="@null" />
 
         <CheckBox android:id="@+id/automatic_mode"
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/automatic_brightness"
