--- a/res/layout/preference_inputmethod.xml
+++ b/res/layout/preference_inputmethod.xml
@@ -17,7 +17,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="64dip"
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:gravity="center_vertical">
     <LinearLayout
@@ -33,8 +33,9 @@
             android:id="@android:id/widget_frame"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:orientation="vertical" />
+            android:minWidth="@*android:dimen/preference_icon_minWidth"
+            android:layout_marginEnd="@*android:dimen/preference_item_padding_inner"
+            android:gravity="center" />
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -47,7 +48,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
-                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="22dp"
                 android:ellipsize="marquee"
                 android:fadingEdge="horizontal"/>
             <TextView
@@ -56,31 +57,26 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@android:id/title"
                 android:layout_alignStart="@android:id/title"
+                android:textSize="13dp"
                 android:paddingBottom="3dip"
                 android:visibility="gone"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textSize="13sp"
-                android:textColor="?android:attr/textColorSecondary"
                 android:focusable="false"
-                android:maxLines="4" />
+                android:ellipsize="marquee"
+                android:singleLine="true" />
         </RelativeLayout>
     </LinearLayout>
-    <View
-        android:layout_width="2dip"
-        android:layout_height="match_parent"
-        android:layout_marginTop="5dip"
-        android:layout_marginBottom="5dip"
-        android:background="@android:drawable/divider_horizontal_dark" />
     <ImageView
         android:id="@+id/inputmethod_settings"
         android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dip"
         android:paddingStart="15dip"
         android:paddingEnd="?android:attr/scrollbarSize"
-        android:src="@drawable/ic_sysbar_quicksettings"
+        android:src="@drawable/myic_sysbar_quicksettings"
         android:contentDescription="@string/input_method_settings_button"
         android:layout_gravity="center"
         android:clickable="true"
         android:focusable="true"
-        android:background="?android:attr/selectableItemBackground" />
+        android:background="?android:selectableItemBackground"
+        />
 </LinearLayout>
