--- a/res/layout/running_processes_item.xml
+++ b/res/layout/running_processes_item.xml
@@ -19,18 +19,19 @@
 
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="64dip"
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:paddingStart="?android:attr/listPreferredItemPaddingStart"
     android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
-    android:paddingTop="8dip"
-    android:paddingBottom="8dip"
+    android:paddingTop="4dip"
+    android:paddingBottom="4dip"
     android:columnCount="2">
 
     <ImageView
         android:id="@+id/icon"
         android:layout_width="@android:dimen/app_icon_size"
         android:layout_height="@android:dimen/app_icon_size"
+        android:layout_gravity="center_vertical"
         android:layout_rowSpan="2"
         android:layout_marginEnd="8dip"
         android:scaleType="centerInside"
@@ -48,7 +49,7 @@
             android:layout_weight="1"
             android:singleLine="true"
             android:ellipsize="marquee"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textSize="20dp"
             android:textAlignment="viewStart" />
 
         <TextView
@@ -56,7 +57,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dip"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:textSize="14dp" />
 
     </LinearLayout>
 
@@ -69,7 +70,7 @@
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textSize="14dp"
             android:textAlignment="viewStart" />
 
         <TextView
@@ -77,7 +78,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dip"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:textSize="14dp" />
 
     </LinearLayout>
 
