--- a/res/values-sw600dp/styles.xml
+++ b/res/values-sw600dp/styles.xml
@@ -16,7 +16,7 @@
 
 <resources>
 
-    <style name="Theme.CreateShortCut" parent="android:Theme.Holo.Dialog">
+    <style name="Theme.CreateShortCut" parent="android:Theme.Dialog">
         <item name="android:windowNoTitle">true</item>
     </style>
 
@@ -34,14 +34,14 @@
         <item name="android:layout_width">0dip</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">3</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">15sp</item>
     </style>
 
     <style name="wifi_item_content">
         <item name="android:layout_width">0dip</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">7</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">16sp</item>
     </style>
 
     <style name="wifi_section">
@@ -55,7 +55,7 @@
         <item name="android:minWidth">208dip</item>
         <item name="android:layout_height">48dip</item>
         <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">18sp</item>
     </style>
 
     <style name="KeyguardAppWidgetItem">
