--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -16,7 +16,8 @@
 
 <resources>
 
-    <style name="Theme.WifiDialog" parent="@*android:style/Theme.Holo.Dialog.Alert">
+    <style name="Theme.WifiDialog" parent="@*android:style/Theme.Dialog.Alert">
+        <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowSoftInputMode">adjustResize</item>
     </style>
 </resources>
